--- a/src/_includes/components/block.njk
+++ b/src/_includes/components/block.njk
@@ -1,6 +1,6 @@
 <section class="block argument-block" id="{{ block.data.id }}">
   <h2>{{ block.data.title }}</h2>
   <div class="block-content">
-    {{ block.templateContent | renderWithCitations(citations) | safe }}
+    {{ block.templateContent | renderWithCitations(citations, sources) | safe }}
   </div>
 </section>
