Add APA citation rendering and section

--- a/src/_includes/components/block.njk
+++ b/src/_includes/components/block.njk
@@ -3,4 +3,5 @@
   <div class="block-content">
     {{ block.templateContent | renderWithCitations(citations, sources) | safe }}
   </div>
+  {{ block.data.citations | renderCitationSection(citations, sources) | safe }}
 </section>
