--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -10,7 +10,11 @@
   <a class="skip-link" href="#main-content">Skip to main content</a>
   <header class="site-header">
     <nav aria-label="Primary">
-      <a href="{{ '/' | url }}">The Draft</a>
+      <a class="site-logo" href="{{ '/' | url }}">The Draft</a>
+      <div class="site-nav-links">
+        <a href="{{ '/summaries/' | url }}">Source Summaries</a>
+        <a href="{{ '/bibliography/' | url }}">Bibliography</a>
+      </div>
     </nav>
   </header>
   <main id="main-content">
