Consolidate sources listing

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -12,8 +12,7 @@
     <nav aria-label="Primary">
       <a class="site-logo" href="{{ '/' | url }}">The Draft</a>
       <div class="site-nav-links">
-        <a href="{{ '/summaries/' | url }}">Source Summaries</a>
-        <a href="{{ '/bibliography/' | url }}">Bibliography</a>
+        <a href="{{ '/sources/' | url }}">Sources</a>
       </div>
     </nav>
   </header>
