--- a/src/summaries/summary.njk
+++ b/src/summaries/summary.njk
@@ -30,7 +30,7 @@ eleventyComputed:
     {%- endfor %}
   </div>
   <div class="summary-links">
-    <a href="{{ '/summaries/' | url }}">Back to all summaries</a>
+    <a href="{{ '/sources/' | url }}">Back to sources</a>
     {%- if source.url %}
       <a href="{{ source.url }}">Original source</a>
     {%- endif %}
