--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ title | default("The Draft") }}</title>
   <link rel="stylesheet" href="{{ '/styles/site.css' | url }}">
+  <link rel="alternate" type="application/rss+xml" title="The Draft Articles" href="{{ '/feeds/articles.xml' | url }}">
+  <link rel="alternate" type="application/rss+xml" title="The Draft Source Summaries" href="{{ '/feeds/source-summaries.xml' | url }}">
 </head>
 <body>
   <a class="skip-link" href="#main-content">Skip to main content</a>
