--- a/src/_includes/components/block.njk
+++ b/src/_includes/components/block.njk
@@ -3,33 +3,38 @@
   {% if block.data.tags or block.data.topics or block.data.categories %}
   <div class="block-meta">
     {% if block.data.categories %}
-      <span class="meta-label">Categories:</span>
-      <ul class="meta-list">
-        {%- for category in block.data.categories %}
-          <li>{{ category }}</li>
-        {%- endfor %}
-      </ul>
+      <div class="meta-group">
+        <span class="meta-label">Categories:</span>
+        <ul class="meta-list">
+          {%- for category in block.data.categories %}
+            <li>{{ category }}</li>
+          {%- endfor %}
+        </ul>
+      </div>
     {% endif %}
     {% if block.data.topics %}
-      <span class="meta-label">Topics:</span>
-      <ul class="meta-list">
-        {%- for topic in block.data.topics %}
-          <li>{{ topic }}</li>
-        {%- endfor %}
-      </ul>
+      <div class="meta-group">
+        <span class="meta-label">Topics:</span>
+        <ul class="meta-list">
+          {%- for topic in block.data.topics %}
+            <li>{{ topic }}</li>
+          {%- endfor %}
+        </ul>
+      </div>
     {% endif %}
     {% if block.data.tags %}
-      <span class="meta-label">Tags:</span>
-      <ul class="meta-list">
-        {%- for tag in block.data.tags %}
-          <li>{{ tag }}</li>
-        {%- endfor %}
-      </ul>
+      <div class="meta-group">
+        <span class="meta-label">Tags:</span>
+        <ul class="meta-list">
+          {%- for tag in block.data.tags %}
+            <li>{{ tag }}</li>
+          {%- endfor %}
+        </ul>
+      </div>
     {% endif %}
   </div>
   {% endif %}
   <div class="block-content">
     {{ block.templateContent | renderWithCitations(citations, sources, source_summaries) | safe }}
   </div>
-  {{ block.data.citations | renderCitationSection(citations, sources, source_summaries) | safe }}
 </section>
