Add people profiles and link them to sources

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -15,6 +15,7 @@
       <a class="site-logo" href="{{ '/' | url }}">The Draft</a>
       <div class="site-nav-links">
         <a href="{{ '/sources/' | url }}">Sources</a>
+        <a href="{{ '/people/' | url }}">People</a>
       </div>
     </nav>
   </header>
