Fix RSS feed XML headers

--- a/src/feeds/articles.xml.njk
+++ b/src/feeds/articles.xml.njk
@@ -2,7 +2,7 @@
 permalink: "/feeds/articles.xml"
 eleventyExcludeFromCollections: true
 ---
-{% set feedItems = collections.articles | reverse %}
+{%- set feedItems = collections.articles | reverse -%}
 <?xml version="1.0" encoding="UTF-8"?>
 <rss version="2.0">
   <channel>
