--- a/src/feeds/source-summaries.xml.njk
+++ b/src/feeds/source-summaries.xml.njk
@@ -2,7 +2,7 @@
 permalink: "/feeds/source-summaries.xml"
 eleventyExcludeFromCollections: true
 ---
-{% set feedItems = source_summaries | sortSummariesBySourceDate(sources) %}
+{%- set feedItems = source_summaries | sortSummariesBySourceDate(sources) -%}
 <?xml version="1.0" encoding="UTF-8"?>
 <rss version="2.0">
   <channel>
