Fix profile image path for GitHub Pages pathPrefix

--- a/src/people/person.njk
+++ b/src/people/person.njk
@@ -19,7 +19,7 @@ eleventyComputed:
       {% if profileImage %}
         <img
           class="person-profile__photo"
-          src="{{ profileImage }}"
+          src="{{ profileImage | url }}"
           alt="{{ person.name }} profile photo"
           loading="lazy"
         >
