Rename Profiles to Connect, add back Nearform on X link

--- a/src/people/person.njk
+++ b/src/people/person.njk
@@ -38,7 +38,7 @@ eleventyComputed:
 
 {% if person.social_links %}
   <section>
-    <h2>Profiles</h2>
+    <h2>Connect</h2>
     <ul class="meta-list">
       {%- for link in person.social_links %}
         <li><a href="{{ link.url }}">{{ link.label }}</a></li>
