--- a/src/people/index.njk
+++ b/src/people/index.njk
@@ -28,7 +28,7 @@ title: People
       data-people-card
       data-search="{{ searchTerms | join(' ') | lower }}"
     >
-      <h3><a href="{{ ('/people/' ~ person.id ~ '/') | url }}">{{ person.name }}</a></h3>
+      <h3><a href="{{ ('/people/' ~ (person | getPersonSlug) ~ '/') | url }}">{{ person.name }}</a></h3>
       {% if personSources.length %}
         {% if personSources.length == 1 %}
           <p>1 source</p>
