--- a/src/summaries/summary.njk
+++ b/src/summaries/summary.njk
@@ -43,7 +43,7 @@ eleventyComputed:
     <h2>People in this source</h2>
     <ul class="meta-list">
       {%- for person in sourcePeople %}
-        <li><a href="{{ ('/people/' ~ person.id ~ '/') | url }}">{{ person.name }}</a></li>
+        <li><a href="{{ ('/people/' ~ (person | getPersonSlug) ~ '/') | url }}">{{ person.name }}</a></li>
       {%- endfor %}
     </ul>
   </section>
